<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20.0dip"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/blog_list_item_title"
        android:textSize="18.0sp" 
        android:textColor="@color/list_item_title" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" />
    <TextView 
        android:id="@+id/blog_list_item_authorname"
        android:textSize="12.0sp" 
        android:textColor="@color/list_item_auther" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" />
    <TextView 
        android:id="@+id/blog_list_item_summary"
        android:textSize="15.0sp" 
        android:textColor="@android:color/black" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" />
    <LinearLayout 
        android:orientation="horizontal" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content">
        <TextView 
            android:id="@+id/blog_list_item_updated"
            android:textSize="12.0sp" 
            android:textColor="@color/list_item_other" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" />
        <TextView 
            android:textSize="12.0sp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/views_comments_devider" />
        <TextView 
            android:id="@+id/blog_list_item_views"
            android:textSize="12.0sp" 
            android:textColor="@color/list_item_other" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/list_item_views" />
        <TextView 
            android:id="@+id/blog_list_item_views_num"
            android:textSize="12.0sp" 
            android:textColor="@color/list_item_other" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/zero" />
        <TextView 
            android:textSize="12.0sp" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/views_comments_devider" />
        <TextView 
            android:id="@+id/blog_list_item_comments"
            android:textSize="12.0sp" 
            android:textColor="@color/list_item_other" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/list_item_comments" />
        <TextView 
            android:id="@+id/blog_list_item_comments_num"
            android:textSize="12.0sp" 
            android:textColor="@color/list_item_other" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/zero" />
    </LinearLayout>

</LinearLayout>
