<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/mLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@drawable/default_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/RelativeLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40.0px"
            android:layout_marginRight="40.0px"
            android:layout_marginTop="100.0px"
            android:background="@drawable/login_back"
            android:paddingBottom="30.0px"
            android:paddingTop="18.0px" >

            <ImageView
                android:id="@+id/faceImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_head" />

            <EditText
                android:id="@+id/login_edit_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:layout_toRightOf="@+id/faceImg"
                android:background="@drawable/qq_edit_login"
                android:hint="@string/strInputAccHint"
                android:maxLength="10"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_account"
                android:layout_alignLeft="@+id/login_edit_account"
                android:layout_alignTop="@+id/login_edit_account"
                android:layout_marginRight="15.0sp"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strAccInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <ImageButton
                android:id="@+id/popupwindow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_account"
                android:layout_alignRight="@+id/login_edit_account"
                android:layout_alignTop="@+id/login_edit_account"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/more_select" />

            <EditText
                android:id="@+id/login_edit_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_edit_account"
                android:layout_alignRight="@+id/login_edit_account"
                android:layout_below="@+id/login_edit_account"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/qq_edit_login"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_pwd"
                android:layout_alignRight="@+id/TextView01"
                android:layout_alignTop="@+id/login_edit_pwd"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strPswInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextView02"
                android:layout_marginTop="20dp"
                android:padding="8dp"         
                android:paddingRight="10dp">

                <CheckBox
                    android:id="@+id/login_cb_savepwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="8dp"
                    android:layout_alignBottom="@+id/login_btn_login"
                    android:button="@drawable/qq_btn_check"
                    android:checked="true"
                    android:text="@string/opt_remember"
                    android:textColor="#ff222222"
                    android:textSize="16.0sp" />

                <Button
                    android:id="@+id/login_btn_login"
                    android:layout_width="80.dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:textSize="14sp"
                    android:text="登    陆" />
            </RelativeLayout>
        </RelativeLayout>

        <TableLayout
            android:id="@+id/TableLayout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40.0px"
            android:layout_marginRight="40.0px"
            android:stretchColumns="1" >

            <TableRow>

                <CheckBox
                    android:id="@+id/login_cb_visible"
                    style="@style/MyCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opt_hideLogin"
                    android:textColor="#7fffffff" />

                <CheckBox
                    android:id="@+id/login_cb_openvibra"
                    style="@style/MyCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/opt_openVibra"
                    android:textColor="#7fffffff" />
            </TableRow>

            <TableRow>

                <CheckBox
                    android:id="@+id/login_cb_receivegroupmsg"
                    style="@style/MyCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opt_acceptGroupMsg"
                    android:textColor="#7fffffff" />

                <CheckBox
                    android:id="@+id/login_cb_quite"
                    style="@style/MyCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/opt_silent"
                    android:textColor="#7fffffff" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="44.0dip"
        android:background="@drawable/bottom" >

        <ImageButton
            android:id="@+id/login_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13.0dip"
            android:layout_marginTop="2.0dip"
            android:background="@drawable/option"
            android:clickable="true" />
        <TextView 
            android:id="@+id/login_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="跳过"
            android:gravity="center_vertical"
             android:layout_marginTop="6.0dip"
            android:layout_marginRight="13.0dip"
          android:textColor="#7fffffff" 
           android:textSize="16sp"
         android:layout_toLeftOf="@id/login_option"
         android:layout_alignParentRight="true"
         android:clickable="true"
            />
    </RelativeLayout>

</LinearLayout>